--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -16,7 +16,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.preprocessing import LabelEncoder \n",
+    "\n"
    ]
   },
   {
@@ -39,7 +42,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\desti\\AppData\\Local\\Temp\\ipykernel_26312\\1981797746.py:2: DtypeWarning: Columns (3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "C:\\Users\\desti\\AppData\\Local\\Temp\\ipykernel_21764\\2647166148.py:2: DtypeWarning: Columns (3,4) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  SteamApp_y = pd.read_csv('steam_app_data.csv')\n"
      ]
     },
@@ -91,11 +94,11 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>10</td>\n",
-       "      <td>Counter-Strike</td>\n",
+       "      <td>52</td>\n",
        "      <td>999.0</td>\n",
        "      <td>16360</td>\n",
        "      <td>game</td>\n",
-       "      <td>Counter-Strike</td>\n",
+       "      <td>52</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -115,11 +118,11 @@
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>220</td>\n",
-       "      <td>Half-Life 2</td>\n",
+       "      <td>140</td>\n",
        "      <td>999.0</td>\n",
        "      <td>1177</td>\n",
        "      <td>game</td>\n",
-       "      <td>Half-Life 2</td>\n",
+       "      <td>140</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -139,11 +142,11 @@
        "    <tr>\n",
        "      <th>10</th>\n",
        "      <td>240</td>\n",
-       "      <td>Counter-Strike: Source</td>\n",
+       "      <td>53</td>\n",
        "      <td>999.0</td>\n",
        "      <td>7752</td>\n",
        "      <td>game</td>\n",
-       "      <td>Counter-Strike: Source</td>\n",
+       "      <td>53</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -163,11 +166,11 @@
        "    <tr>\n",
        "      <th>19</th>\n",
        "      <td>550</td>\n",
-       "      <td>Left 4 Dead 2</td>\n",
+       "      <td>164</td>\n",
        "      <td>999.0</td>\n",
        "      <td>20328</td>\n",
        "      <td>game</td>\n",
-       "      <td>Left 4 Dead 2</td>\n",
+       "      <td>164</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>full</td>\n",
@@ -187,11 +190,11 @@
        "    <tr>\n",
        "      <th>20</th>\n",
        "      <td>620</td>\n",
-       "      <td>Portal 2</td>\n",
+       "      <td>225</td>\n",
        "      <td>199.0</td>\n",
        "      <td>2793</td>\n",
        "      <td>game</td>\n",
-       "      <td>Portal 2</td>\n",
+       "      <td>225</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>full</td>\n",
@@ -235,11 +238,11 @@
        "    <tr>\n",
        "      <th>41330</th>\n",
        "      <td>1593500</td>\n",
-       "      <td>God of War</td>\n",
+       "      <td>129</td>\n",
        "      <td>4999.0</td>\n",
        "      <td>12509</td>\n",
        "      <td>game</td>\n",
-       "      <td>God of War</td>\n",
+       "      <td>129</td>\n",
        "      <td>18</td>\n",
        "      <td>False</td>\n",
        "      <td>full</td>\n",
@@ -259,11 +262,11 @@
        "    <tr>\n",
        "      <th>43062</th>\n",
        "      <td>1677740</td>\n",
-       "      <td>Stumble Guys</td>\n",
+       "      <td>274</td>\n",
        "      <td>799.0</td>\n",
        "      <td>4423</td>\n",
        "      <td>game</td>\n",
-       "      <td>Stumble Guys</td>\n",
+       "      <td>274</td>\n",
        "      <td>0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -283,11 +286,11 @@
        "    <tr>\n",
        "      <th>45374</th>\n",
        "      <td>1794680</td>\n",
-       "      <td>Vampire Survivors</td>\n",
+       "      <td>319</td>\n",
        "      <td>299.0</td>\n",
        "      <td>52451</td>\n",
        "      <td>game</td>\n",
-       "      <td>Vampire Survivors</td>\n",
+       "      <td>319</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>full</td>\n",
@@ -307,11 +310,11 @@
        "    <tr>\n",
        "      <th>46038</th>\n",
        "      <td>1832640</td>\n",
-       "      <td>Mirror 2: Project X</td>\n",
+       "      <td>184</td>\n",
        "      <td>199.0</td>\n",
        "      <td>3505</td>\n",
        "      <td>game</td>\n",
-       "      <td>Mirror 2: Project X</td>\n",
+       "      <td>184</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -331,11 +334,11 @@
        "    <tr>\n",
        "      <th>46198</th>\n",
        "      <td>1843760</td>\n",
-       "      <td>Rogue Tower</td>\n",
+       "      <td>245</td>\n",
        "      <td>1499.0</td>\n",
        "      <td>2858</td>\n",
        "      <td>game</td>\n",
-       "      <td>Rogue Tower</td>\n",
+       "      <td>245</td>\n",
        "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
@@ -358,57 +361,44 @@
        "</div>"
       ],
       "text/plain": [
-       "         appid                  name_x  price_x    ccu  type  \\\n",
-       "0           10          Counter-Strike    999.0  16360  game   \n",
-       "9          220             Half-Life 2    999.0   1177  game   \n",
-       "10         240  Counter-Strike: Source    999.0   7752  game   \n",
-       "19         550           Left 4 Dead 2    999.0  20328  game   \n",
-       "20         620                Portal 2    199.0   2793  game   \n",
-       "...        ...                     ...      ...    ...   ...   \n",
-       "41330  1593500              God of War   4999.0  12509  game   \n",
-       "43062  1677740            Stumble Guys    799.0   4423  game   \n",
-       "45374  1794680       Vampire Survivors    299.0  52451  game   \n",
-       "46038  1832640     Mirror 2: Project X    199.0   3505  game   \n",
-       "46198  1843760             Rogue Tower   1499.0   2858  game   \n",
+       "         appid  name_x  price_x    ccu  type  name_y required_age is_free  \\\n",
+       "0           10      52    999.0  16360  game      52          0.0   False   \n",
+       "9          220     140    999.0   1177  game     140          0.0   False   \n",
+       "10         240      53    999.0   7752  game      53          0.0   False   \n",
+       "19         550     164    999.0  20328  game     164          0.0   False   \n",
+       "20         620     225    199.0   2793  game     225          0.0   False   \n",
+       "...        ...     ...      ...    ...   ...     ...          ...     ...   \n",
+       "41330  1593500     129   4999.0  12509  game     129           18   False   \n",
+       "43062  1677740     274    799.0   4423  game     274            0   False   \n",
+       "45374  1794680     319    299.0  52451  game     319          0.0   False   \n",
+       "46038  1832640     184    199.0   3505  game     184          0.0   False   \n",
+       "46198  1843760     245   1499.0   2858  game     245          0.0   False   \n",
        "\n",
-       "                       name_y required_age is_free controller_support  \\\n",
-       "0              Counter-Strike          0.0   False                NaN   \n",
-       "9                 Half-Life 2          0.0   False                NaN   \n",
-       "10     Counter-Strike: Source          0.0   False                NaN   \n",
-       "19              Left 4 Dead 2          0.0   False               full   \n",
-       "20                   Portal 2          0.0   False               full   \n",
-       "...                       ...          ...     ...                ...   \n",
-       "41330              God of War           18   False               full   \n",
-       "43062            Stumble Guys            0   False                NaN   \n",
-       "45374       Vampire Survivors          0.0   False               full   \n",
-       "46038     Mirror 2: Project X          0.0   False                NaN   \n",
-       "46198             Rogue Tower          0.0   False                NaN   \n",
+       "      controller_support                                                dlc  \\\n",
+       "0                    NaN                                                NaN   \n",
+       "9                    NaN                                           [323140]   \n",
+       "10                   NaN                                                NaN   \n",
+       "19                  full                                                NaN   \n",
+       "20                  full                                           [323180]   \n",
+       "...                  ...                                                ...   \n",
+       "41330               full                                                NaN   \n",
+       "43062                NaN                                                NaN   \n",
+       "45374               full                                                NaN   \n",
+       "46038                NaN  [1881490, 1858303, 1858305, 1867630, 1858300, ...   \n",
+       "46198                NaN                                          [1867020]   \n",
        "\n",
-       "                                                     dlc  ...  \\\n",
-       "0                                                    NaN  ...   \n",
-       "9                                               [323140]  ...   \n",
-       "10                                                   NaN  ...   \n",
-       "19                                                   NaN  ...   \n",
-       "20                                              [323180]  ...   \n",
-       "...                                                  ...  ...   \n",
-       "41330                                                NaN  ...   \n",
-       "43062                                                NaN  ...   \n",
-       "45374                                                NaN  ...   \n",
-       "46038  [1881490, 1858303, 1858305, 1867630, 1858300, ...  ...   \n",
-       "46198                                          [1867020]  ...   \n",
-       "\n",
-       "                                              categories  \\\n",
-       "0      [{'id': 1, 'description': 'Multi-player'}, {'i...   \n",
-       "9      [{'id': 2, 'description': 'Single-player'}, {'...   \n",
-       "10     [{'id': 1, 'description': 'Multi-player'}, {'i...   \n",
-       "19     [{'id': 2, 'description': 'Single-player'}, {'...   \n",
-       "20     [{'id': 2, 'description': 'Single-player'}, {'...   \n",
-       "...                                                  ...   \n",
-       "41330  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
-       "43062  [{'id': 1, 'description': 'Multi-player'}, {'i...   \n",
-       "45374  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
-       "46038  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
-       "46198  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "       ...                                         categories  \\\n",
+       "0      ...  [{'id': 1, 'description': 'Multi-player'}, {'i...   \n",
+       "9      ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "10     ...  [{'id': 1, 'description': 'Multi-player'}, {'i...   \n",
+       "19     ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "20     ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "...    ...                                                ...   \n",
+       "41330  ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "43062  ...  [{'id': 1, 'description': 'Multi-player'}, {'i...   \n",
+       "45374  ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "46038  ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
+       "46198  ...  [{'id': 2, 'description': 'Single-player'}, {'...   \n",
        "\n",
        "                                                  genres  \\\n",
        "0                 [{'id': '1', 'description': 'Action'}]   \n",
@@ -545,6 +535,15 @@
     "# Please note if there are overlapping columns they will be suffixed with '_x' and '_y' respectively\n",
     "merged_df = pd.merge(SteamSpy_x[['appid', 'name', 'price', 'ccu']], SteamApp_y, on='appid', how='inner')\n",
     "merged_df = merged_df[merged_df['ccu'] > 1000]\n",
+    "\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# Encoding categorical variables to numeric values\n",
+    "if 'name_x' in merged_df.columns:\n",
+    "    merged_df['name_x'] = label_encoder.fit_transform(merged_df['name_x'])\n",
+    "if 'name_y' in merged_df.columns:\n",
+    "    merged_df['name_y'] = label_encoder.fit_transform(merged_df['name_y'])\n",
+    "\n",
     "\n",
     "merged_df.to_csv('merged_steam_data.csv', index=False)\n",
     "\n",
