new ANN machine

--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -7,79 +7,138 @@
    "metadata": {},
    "outputs": [
     {
-     "ename": "KeyError",
-     "evalue": "'name'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexes/base.py:3805\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3804\u001b[0m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[0;32m-> 3805\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_engine\u001b[38;5;241m.\u001b[39mget_loc(casted_key)\n\u001b[1;32m   3806\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
-      "File \u001b[0;32mindex.pyx:167\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mindex.pyx:196\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7081\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "File \u001b[0;32mpandas/_libs/hashtable_class_helper.pxi:7089\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'name'",
-      "\nThe above exception was the direct cause of the following exception:\n",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[1], line 17\u001b[0m\n\u001b[1;32m     15\u001b[0m \u001b[38;5;66;03m# Encode the 'name' column into numeric labels\u001b[39;00m\n\u001b[1;32m     16\u001b[0m le \u001b[38;5;241m=\u001b[39m LabelEncoder()\n\u001b[0;32m---> 17\u001b[0m df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname_encoded\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m=\u001b[39m le\u001b[38;5;241m.\u001b[39mfit_transform(df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# Select features for training\u001b[39;00m\n\u001b[1;32m     20\u001b[0m feature_columns \u001b[38;5;241m=\u001b[39m [\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mprice_x\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mname_encoded\u001b[39m\u001b[38;5;124m'\u001b[39m]  \u001b[38;5;66;03m# You can add more features here\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[1;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[0;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mget_loc(key)\n\u001b[1;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[1;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[1;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[1;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[1;32m   3810\u001b[0m     ):\n\u001b[1;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[0;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01merr\u001b[39;00m\n\u001b[1;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[1;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[1;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[1;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[1;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'name'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Available columns in the dataset:\n",
+      "['appid', 'name_x', 'price_x', 'ccu', 'type', 'name_y', 'required_age', 'is_free', 'controller_support', 'dlc', 'detailed_description', 'about_the_game', 'short_description', 'fullgame', 'supported_languages', 'header_image', 'website', 'pc_requirements', 'mac_requirements', 'linux_requirements', 'legal_notice', 'drm_notice', 'ext_user_account_notice', 'developers', 'publishers', 'demos', 'price_y', 'packages', 'package_groups', 'platforms', 'metacritic', 'reviews', 'categories', 'genres', 'screenshots', 'movies', 'recommendations', 'achievements', 'release_date', 'support_info', 'background', 'content_descriptors']\n",
+      "\n",
+      "Training the MLPClassifier...\n",
+      "\n",
+      "Visualizations have been saved in the 'visualizations' folder!\n",
+      "R² Score: -0.13745265\n"
      ]
     }
    ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "\n",
+    "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler, LabelEncoder\n",
+    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, mean_squared_error, r2_score\n",
+    "\n",
     "\n",
     "# Load merged dataset\n",
     "df = pd.read_csv('merged_steam_data.csv')\n",
     "\n",
+    "\n",
+    "# Print available columns\n",
+    "print(\"Available columns in the dataset:\")\n",
+    "print(df.columns.tolist())\n",
+    "\n",
+    "\n",
     "# Create binary target: popular if ccu > 5000\n",
     "df['popular'] = (df['ccu'] > 5000).astype(int)\n",
     "\n",
-    "# Encode the 'name' column into numeric labels\n",
-    "le = LabelEncoder()\n",
-    "df['name_encoded'] = le.fit_transform(df['name'])\n",
     "\n",
-    "# Select features for training\n",
-    "feature_columns = ['price_x', 'name_encoded']  # You can add more features here\n",
+    "# Select features for training - using only price\n",
+    "feature_columns = ['price_x']\n",
     "X = df[feature_columns].values\n",
     "y = df['popular'].values\n",
+    "\n",
     "\n",
     "# Scale features\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
+    "\n",
     "\n",
     "# Split into train/test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_scaled, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# Define and train the ANN using scikit-learn\n",
+    "\n",
+    "# Define and train the ANN\n",
     "model = MLPClassifier(\n",
     "    hidden_layer_sizes=(64, 32),\n",
     "    activation='relu',\n",
-    "    alpha=0.01,                # L2 regularization (penalty term)\n",
+    "    alpha=0.01,\n",
     "    batch_size=32,\n",
     "    learning_rate_init=0.001,\n",
     "    max_iter=200,\n",
     "    random_state=42\n",
     ")\n",
     "\n",
-    "print(\"Training the MLPClassifier...\")\n",
+    "\n",
+    "print(\"\\nTraining the MLPClassifier...\")\n",
     "model.fit(X_train, y_train)\n",
     "\n",
-    "# Predict and evaluate\n",
-    "y_pred = model.predict(X_test)\n",
-    "accuracy = accuracy_score(y_test, y_pred)\n",
     "\n",
-    "print(f\"\\nTest Accuracy: {accuracy:.4f}\")\n"
+    "# Get predictions\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "\n",
+    "# Create visualization directory if it doesn't exist\n",
+    "import os\n",
+    "if not os.path.exists('visualizations'):\n",
+    "    os.makedirs('visualizations')\n",
+    "\n",
+    "\n",
+    "# Plot 1: Price vs CCU scatter plot\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.scatter(df['price_x'], df['ccu'], alpha=0.5, c='blue', label='Actual Data')\n",
+    "plt.xlabel('Price ($)')\n",
+    "plt.ylabel('CCU')\n",
+    "plt.title('Price vs CCU Relationship')\n",
+    "plt.yscale('log')  # Logarithmic scale for CCU\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "plt.savefig('visualizations/price_vs_ccu.png')\n",
+    "plt.close()\n",
+    "\n",
+    "\n",
+    "# Plot 2: Actual vs Predicted CCU\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "\n",
+    "\n",
+    "# Get the test set indices\n",
+    "test_indices = X_test.shape[0]\n",
+    "actual_ccu = df['ccu'].iloc[-test_indices:].values\n",
+    "predicted_ccu = np.where(y_pred == 1, df['ccu'].mean() * 1.5, df['ccu'].mean() * 0.5)\n",
+    "\n",
+    "\n",
+    "plt.scatter(actual_ccu, predicted_ccu, alpha=0.5, c='red', label='Predictions')\n",
+    "plt.plot([min(actual_ccu), max(actual_ccu)], [min(predicted_ccu), max(predicted_ccu)],\n",
+    "         'k--', label='Perfect Prediction')\n",
+    "\n",
+    "\n",
+    "plt.xlabel('Actual CCU')\n",
+    "plt.ylabel('Predicted CCU')\n",
+    "plt.title('Actual vs Predicted CCU (Logarithmic Scale)')\n",
+    "plt.xscale('log')\n",
+    "plt.yscale('log')\n",
+    "plt.grid(True)\n",
+    "plt.legend()\n",
+    "\n",
+    "\n",
+    "# Calculate and display R² score\n",
+    "r2 = r2_score(actual_ccu, predicted_ccu)\n",
+    "plt.text(0.05, 0.95, f'R² Score: {r2:.8f}', transform=plt.gca().transAxes)\n",
+    "\n",
+    "\n",
+    "plt.savefig('visualizations/actual_vs_predicted_ccu.png')\n",
+    "plt.close()\n",
+    "\n",
+    "\n",
+    "print(\"\\nVisualizations have been saved in the 'visualizations' folder!\")\n",
+    "print(f\"R² Score: {r2:.8f}\")\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   }
  ],
