--- a/DM_Machine.ipynb
+++ b/DM_Machine.ipynb
@@ -1,4 +1,50 @@
 {
+ "cells": [
+
+
+  {
+
+
+   "cell_type": "markdown",
+
+
+   "id": "bb8d1da8",
+
+
+   "metadata": {},
+
+
+   "source": [
+
+
+    "TO DO\n",
+
+
+    "- Imports\n",
+
+
+    "- Dataset get\n",
+
+
+    "- Data processing\n",
+
+
+    "- Hyper parameter\n",
+
+
+    "- Finish tuning\n",
+
+
+    "- Display data\n",
+
+
+    "- Display accuracy"
+
+
+   ]
+
+
+  },
    "cell_type": "markdown",
    "id": "f1402eb5",
    "metadata": {},
