--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "5d3a2ec7",
    "metadata": {},
    "outputs": [
@@ -26,119 +26,81 @@
     "import matplotlib.pyplot as plt\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.neural_network import MLPClassifier\n",
-    "from sklearn.metrics import accuracy_score, mean_squared_error, r2_score\n",
+    "from sklearn.neural_network import MLPRegressor\n",
+    "from sklearn.metrics import r2_score\n",
     "\n",
-    "\n",
-    "# Load merged dataset\n",
     "df = pd.read_csv('merged_steam_data.csv')\n",
     "\n",
-    "\n",
-    "# Print available columns\n",
-    "print(\"Available columns in the dataset:\")\n",
-    "print(df.columns.tolist())\n",
-    "\n",
-    "\n",
-    "# Create binary target: popular if ccu > 5000\n",
-    "df['popular'] = (df['ccu'] > 5000).astype(int)\n",
-    "\n",
-    "\n",
-    "# Select features for training - using only price\n",
-    "feature_columns = ['price_x']\n",
+    "feature_columns = [\n",
+    "    'price_x',\n",
+    "    'ccu',  \n",
+    "]    \n",
     "X = df[feature_columns].values\n",
-    "y = df['popular'].values\n",
+    "y = df['ccu'].values\n",
     "\n",
-    "\n",
-    "# Scale features\n",
     "scaler = StandardScaler()\n",
     "X_scaled = scaler.fit_transform(X)\n",
     "\n",
-    "\n",
-    "# Split into train/test sets\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_scaled, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "\n",
     "# Define and train the ANN\n",
-    "model = MLPClassifier(\n",
+    "model = MLPRegressor(\n",
     "    hidden_layer_sizes=(64, 32),\n",
     "    activation='relu',\n",
     "    alpha=0.01,\n",
     "    batch_size=32,\n",
     "    learning_rate_init=0.001,\n",
-    "    max_iter=200,\n",
-    "    random_state=42\n",
+    "    max_iter=200000,\n",
+    "    random_state=42,\n",
     ")\n",
     "\n",
-    "\n",
-    "print(\"\\nTraining the MLPClassifier...\")\n",
+    "print(\"\\nTraining the MLPRegressor...\")\n",
     "model.fit(X_train, y_train)\n",
     "\n",
+    "y_prediction = model.predict(X_test)\n",
     "\n",
-    "# Get predictions\n",
-    "y_pred = model.predict(X_test)\n",
-    "\n",
-    "\n",
-    "# Create visualization directory if it doesn't exist\n",
-    "import os\n",
-    "if not os.path.exists('visualizations'):\n",
-    "    os.makedirs('visualizations')\n",
-    "\n",
+    "y_prediction_postprocessed = np.maximum(0, y_prediction)\n",
     "\n",
     "# Plot 1: Price vs CCU scatter plot\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.scatter(df['price_x'], df['ccu'], alpha=0.5, c='blue', label='Actual Data')\n",
     "plt.xlabel('Price ($)')\n",
     "plt.ylabel('CCU')\n",
-    "plt.title('Price vs CCU Relationship')\n",
-    "plt.yscale('log')  # Logarithmic scale for CCU\n",
+    "plt.title('Price vs CCU Relationship (Logarithmic CCU Scale)')\n",
+    "plt.yscale('log')\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
     "plt.savefig('visualizations/price_vs_ccu.png')\n",
     "plt.close()\n",
+    "print(\"Saved 'price_vs_ccu.png'\")\n",
     "\n",
+    "all_data_predictions = model.predict(X_scaled)\n",
+    "all_data_predictions_postprocessed = np.maximum(0, all_data_predictions)\n",
     "\n",
     "# Plot 2: Actual vs Predicted CCU\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
+    "actual_ccu_all = df['ccu'].values\n",
     "\n",
-    "# Get the test set indices\n",
-    "test_indices = X_test.shape[0]\n",
-    "actual_ccu = df['ccu'].iloc[-test_indices:].values\n",
-    "predicted_ccu = np.where(y_pred == 1, df['ccu'].mean() * 1.5, df['ccu'].mean() * 0.5)\n",
+    "plt.scatter(actual_ccu_all, all_data_predictions_postprocessed, alpha=0.5, c='red', label='Model Predictions')\n",
     "\n",
-    "\n",
-    "plt.scatter(actual_ccu, predicted_ccu, alpha=0.5, c='red', label='Predictions')\n",
-    "plt.plot([min(actual_ccu), max(actual_ccu)], [min(predicted_ccu), max(predicted_ccu)],\n",
-    "         'k--', label='Perfect Prediction')\n",
+    "min_val = min(actual_ccu_all.min(), all_data_predictions_postprocessed.min())\n",
+    "max_val = max(actual_ccu_all.max(), all_data_predictions_postprocessed.max())\n",
+    "plt.plot([min_val, max_val], [min_val, max_val], 'k--', lw=2, label='Perfect Prediction Line')\n",
     "\n",
     "\n",
-    "plt.xlabel('Actual CCU')\n",
-    "plt.ylabel('Predicted CCU')\n",
-    "plt.title('Actual vs Predicted CCU (Logarithmic Scale)')\n",
+    "plt.xlabel('Actual CCU (Log Scale)')\n",
+    "plt.ylabel('Predicted CCU (Log Scale)')\n",
+    "r2 = r2_score(y_test, y_prediction_postprocessed)\n",
+    "plt.title('Actual vs Predicted CCU on Entire Dataset (Logarithmic Scale)')\n",
     "plt.xscale('log')\n",
     "plt.yscale('log')\n",
     "plt.grid(True)\n",
     "plt.legend()\n",
-    "\n",
-    "\n",
-    "# Calculate and display R² score\n",
-    "r2 = r2_score(actual_ccu, predicted_ccu)\n",
-    "plt.text(0.05, 0.95, f'R² Score: {r2:.8f}', transform=plt.gca().transAxes)\n",
-    "\n",
-    "\n",
     "plt.savefig('visualizations/actual_vs_predicted_ccu.png')\n",
-    "plt.close()\n",
-    "\n",
-    "\n",
-    "print(\"\\nVisualizations have been saved in the 'visualizations' folder!\")\n",
-    "print(f\"R² Score: {r2:.8f}\")\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "plt.close()"
    ]
   }
  ],
