--- a/ANN.ipynb
+++ b/ANN.ipynb
@@ -10,13 +10,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Available columns in the dataset:\n",
-      "['appid', 'name_x', 'price_x', 'ccu', 'type', 'name_y', 'required_age', 'is_free', 'controller_support', 'dlc', 'detailed_description', 'about_the_game', 'short_description', 'fullgame', 'supported_languages', 'header_image', 'website', 'pc_requirements', 'mac_requirements', 'linux_requirements', 'legal_notice', 'drm_notice', 'ext_user_account_notice', 'developers', 'publishers', 'demos', 'price_y', 'packages', 'package_groups', 'platforms', 'metacritic', 'reviews', 'categories', 'genres', 'screenshots', 'movies', 'recommendations', 'achievements', 'release_date', 'support_info', 'background', 'content_descriptors']\n",
       "\n",
-      "Training the MLPClassifier...\n",
-      "\n",
-      "Visualizations have been saved in the 'visualizations' folder!\n",
-      "R² Score: -0.13745265\n"
+      "Training the MLPRegressor...\n",
+      "Saved 'price_vs_ccu.png'\n"
      ]
     }
    ],
@@ -45,7 +41,7 @@
     "    X_scaled, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# Define and train the ANN\n",
+    "\n",
     "model = MLPRegressor(\n",
     "    hidden_layer_sizes=(64, 32),\n",
     "    activation='relu',\n",
@@ -63,7 +59,7 @@
     "\n",
     "y_prediction_postprocessed = np.maximum(0, y_prediction)\n",
     "\n",
-    "# Plot 1: Price vs CCU scatter plot\n",
+    "\n",
     "plt.figure(figsize=(12, 6))\n",
     "plt.scatter(df['price_x'], df['ccu'], alpha=0.5, c='blue', label='Actual Data')\n",
     "plt.xlabel('Price ($)')\n",
@@ -79,7 +75,6 @@
     "all_data_predictions = model.predict(X_scaled)\n",
     "all_data_predictions_postprocessed = np.maximum(0, all_data_predictions)\n",
     "\n",
-    "# Plot 2: Actual vs Predicted CCU\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "actual_ccu_all = df['ccu'].values\n",
@@ -89,6 +84,15 @@
     "min_val = min(actual_ccu_all.min(), all_data_predictions_postprocessed.min())\n",
     "max_val = max(actual_ccu_all.max(), all_data_predictions_postprocessed.max())\n",
     "plt.plot([min_val, max_val], [min_val, max_val], 'k--', lw=2, label='Perfect Prediction Line')\n",
+    "\n",
+    "r2 = r2_score(actual_ccu_all, all_data_predictions)\n",
+    "plt.text(0.95, 0.95, f'R² = {r2:.4f}',\n",
+    "         transform=plt.gca().transAxes,\n",
+    "         horizontalalignment='right',\n",
+    "         verticalalignment='top',\n",
+    "         bbox=dict(facecolor='white', alpha=0.8, edgecolor='none', boxstyle='round,pad=0.5'))\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "plt.xlabel('Actual CCU (Log Scale)')\n",
